Updated 2017-01-16-introdution-in-puppet.md